unpackaged/main/default/objects/Diagnostic__c/fields/Voucher_Printing__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Printing__c</fullName>
    <label>Voucher Printing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thermal</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>