unpackaged/main/default/objects/Diagnostic__c/fields/WeChat_Pay__c.field-meta.xml
<CustomField>
    <fullName>WeChat_Pay__c</fullName>
    <label>WeChat Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>